--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     ]
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.52.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
