--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.2.14",
     "@types/react-redux": "^7.1.25",
     "antd": "^5.10.2",
+    "date-fns": "^2.30.0",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
