on check network error

--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,7 @@
     "airbnb-typescript",
     "plugin:react/recommended",
     "plugin:prettier/recommended",
-//    "plugin:import/errors",
+    "plugin:import/errors",
     "plugin:import/warnings"
   ],
   "parser": "@typescript-eslint/parser",
